--- a/inpaintingSub.ipynb
+++ b/inpaintingSub.ipynb
@@ -5,9 +5,7 @@
     "colab": {
       "name": "inpaintingSub.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "aw3lE2A8ypiw"
-      ],
+      "collapsed_sections": [],
       "toc_visible": true,
       "include_colab_link": true
     },
@@ -94,6 +92,7 @@
         "outputId": "41b938d9-87bb-4f27-d348-48dc8bf4d02b"
       },
       "source": [
+        "#splitting the datasets here\n",
         "transform = transforms.Compose([\n",
         "    transforms.RandomHorizontalFlip(p=0.5),\n",
         "    transforms.ToTensor()\n",
@@ -152,7 +151,7 @@
         "id": "-n__AcyJypiu",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 266
+          "height": 264
         },
         "outputId": "1c7a2725-98e8-4f5a-df0c-78fb514c2876"
       },
@@ -200,7 +199,7 @@
         "    i = int((im_h - hole_h + 1) * np.random.random())\n",
         "    j = int((im_w - hole_w + 1) * np.random.random())\n",
         "    mask = torch.zeros((1, im_h, im_w))\n",
-        "    mask[0, i : i + hole_h, j : j + hole_w] = 1\n",
+        "    mask[0, i : i + hole_h, j : j + hole_w] = 1 # 1 for white , 0 for black\n",
         "    return mask, (i, i + hole_h, j, j + hole_w)\n",
         "\n",
         "def create_hole_masks(N, im_h, im_w, hole_h, hole_w, same_size=True):\n",
@@ -212,10 +211,11 @@
         "        hs, ws = np.random.randint(h_min, h_max, N), np.random.randint(w_min, w_max, N)\n",
         "        masks = [create_hole_mask(im_h, im_w, h, w) for h, w in zip(hs, ws)]\n",
         "\n",
-        "    bounds = [mask[1] for mask in masks]\n",
-        "    masks = [mask[0] for mask in masks]\n",
-        "    masks = torch.cat(masks, dim=0)\n",
-        "    return masks.unsqueeze(1), bounds\n",
+        "    bounds = [mask[1] for mask in masks] # bounds of all masks here\n",
+        "    masks = [mask[0] for mask in masks]# the masks are stored here\n",
+        "    masks = torch.cat(masks, dim=0) # each mask is 1X32X32 img. Its concatenated along rows \n",
+        "    return masks.unsqueeze(1), bounds # Returns a new tensor with a dimension of size one inserted at the specified position.\n",
+        "\n",
         "\n"
       ],
       "execution_count": 25,
@@ -262,7 +262,7 @@
         "id": "ju0hFUuCypi1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 71
+          "height": 281
         },
         "outputId": "b2d5fae3-3076-4ad5-a337-0f0ada8496ad"
       },
@@ -304,7 +304,7 @@
         "id": "rshSuajyypi3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 264
         },
         "outputId": "c5c0abd8-57fc-4db9-d67e-b9bbf87dcebd"
       },
@@ -365,7 +365,7 @@
         "    def forward(self, X):\n",
         "        return X.view(-1, *self.shape)\n",
         "\n",
-        "class Generator(nn.Module):\n",
+        "class Generator(nn.Module): # the generator network. we use leaky relu as activation and batch normalisation\n",
         "    \n",
         "    def __init__(self, im_channels):\n",
         "        super(Generator, self).__init__()\n",
@@ -480,19 +480,19 @@
         "            nn.LeakyReLU(0.1),\n",
         "            nn.BatchNorm2d(512),\n",
         "            Flatten(),\n",
-        "            nn.Linear(512, 1024),\n",
+        "            nn.Linear(512, 1024), # perfomrs linear transformation. if input is [1,512] we get out[1,1024]\n",
         "            nn.LeakyReLU(0.1),\n",
         "            nn.BatchNorm1d(1024)\n",
         "        )\n",
         "        \n",
-        "    def forward(self, X, mask_bounds):\n",
+        "    def forward(self, X, mask_bounds): # performs the forward propagation on the local regions. The output is a [1,1024] array\n",
         "        \n",
         "        local_regions = self._get_local_regions(X, mask_bounds)\n",
         "        out = self.net(local_regions)\n",
         "        \n",
         "        return out\n",
         "    \n",
-        "    def _get_local_regions(self, X, mask_bounds):\n",
+        "    def _get_local_regions(self, X, mask_bounds): # gets the local regions i..e the missing parts or masked part of the image. does it for the entire batch at once\n",
         "\n",
         "        N, ch, im_h, im_w = X.shape\n",
         "        local_regions = torch.zeros((N, ch, self.region_size, self.region_size)).cuda()\n",
@@ -522,32 +522,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "BzzxiQWEypjR"
-      },
-      "source": [
-        "# model = LocalDiscriminator(im_channels=3, region_size=14)#.cuda()\n",
-        "# model.eval()\n",
-        "# model.net(train[0][0][:, :14, :14].unsqueeze(0)).shape"
-      ],
-      "execution_count": 31,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "aLSpkK2qypjO"
-      },
-      "source": [
-        "# masks, bounds = create_hole_masks(1, 10, 10, 3, 2, same_size=True)\n",
-        "# # print(masks.shape)\n",
-        "# imshow(model._get_local_regions(train[1000][0].unsqueeze(0), bounds))"
-      ],
-      "execution_count": 32,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Yz6KaMQ5ypjT"
@@ -562,7 +536,7 @@
         "id": "M4F-8riWypjT"
       },
       "source": [
-        "class GlobalDiscriminator(nn.Module):\n",
+        "class GlobalDiscriminator(nn.Module): # global discrminator network\n",
         "    def __init__(self, im_channels):\n",
         "        super(GlobalDiscriminator, self).__init__()\n",
         "        \n",
@@ -591,25 +565,13 @@
         "            nn.BatchNorm1d(1024)\n",
         "        )\n",
         "        \n",
-        "    def forward(self, X):\n",
+        "    def forward(self, X): # performs forward propagation on the entire image and produces a [1,1024] output\n",
         "        out = self.net(X)\n",
         "        return out\n",
         "        \n",
         "        "
       ],
       "execution_count": 33,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hwv3ypCGypjV"
-      },
-      "source": [
-        "# model = GlobalDiscriminator(im_channels=3)#.cuda()\n",
-        "# model(train[0][0].unsqueeze(0)).shape"
-      ],
-      "execution_count": 34,
       "outputs": []
     },
     {
@@ -627,12 +589,12 @@
         "id": "Ahl4-fqyypjZ"
       },
       "source": [
-        "class Discriminator(nn.Module):\n",
+        "class Discriminator(nn.Module): # the complete discriminator with local and global discriminators.\n",
         "    def __init__(self, local_d, global_d):\n",
         "        super(Discriminator, self).__init__()\n",
         "        self.local_discriminator = local_d\n",
         "        self.global_discriminator = global_d\n",
-        "        self.fc = nn.Linear(2048, 1)\n",
+        "        self.fc = nn.Linear(2048, 1)  # here both outputs from the local and global discriminator are combined and a linear transformation is applied\n",
         "        \n",
         "    def forward(self, X, mask_bounds):\n",
         "        local_ = self.local_discriminator(X, mask_bounds)\n",
@@ -669,20 +631,20 @@
         "\n",
         "def train_gan(g, d, train, val, g_o, d_o, params, masks_fn):\n",
         "\n",
-        "    train_loader = data.DataLoader(train, batch_size=params['batch_size'], num_workers=0, pin_memory=True)\n",
-        "    val_loader = data.DataLoader(val, params['val_batch_size'], shuffle=True, pin_memory=True)\n",
+        "    train_loader = data.DataLoader(train, batch_size=params['batch_size'], num_workers=0, pin_memory=True) # returns an iterable over the train data\n",
+        "    val_loader = data.DataLoader(val, params['val_batch_size'], shuffle=True, pin_memory=True)# returns an iterable over the validation data\n",
         "    val_loader = iter(cycle(val_loader))\n",
         "    \n",
-        "    optimizer_g = g_o\n",
-        "    optimizer_d = d_o\n",
+        "    optimizer_g = g_o # optimiser for generator\n",
+        "    optimizer_d = d_o # optimiser for discriminator\n",
         "    \n",
         "    T_c, T_d = params['T_c'], params['T_d']\n",
         "    w = params['w']\n",
         "    for epoch in range(params['epochs']):\n",
-        "        ep_loss_g = 0.\n",
-        "        ep_loss_d = 0.\n",
-        "        fake_err = 0.\n",
-        "        real_err = 0.\n",
+        "        ep_loss_g = 0. # current epoch loss of generator\n",
+        "        ep_loss_d = 0. # current epoch loss of discriminator\n",
+        "        fake_err = 0. # current loss for a fake image\n",
+        "        real_err = 0. # current loss for real image\n",
         "        \n",
         "        if epoch < T_c and epoch == 0:\n",
         "                print(f'\\n>>>> Training generator for {T_c} epochs.')\n",
@@ -702,45 +664,45 @@
         "            N = batch.shape[0]\n",
         "            batch = batch.cuda()\n",
         "            \n",
-        "            masks_g, bounds_g = masks_fn(N)\n",
-        "            batch_masked = batch.clone() * (1 - masks_g)\n",
-        "            batch_with_masks = torch.cat((batch_masked, masks_g[:, :1]), dim=1)\n",
+        "            masks_g, bounds_g = masks_fn(N) \n",
+        "            batch_masked = batch.clone() * (1 - masks_g) # masking the batch of images \n",
+        "            batch_with_masks = torch.cat((batch_masked, masks_g[:, :1]), dim=1) # concatenating all images of the batch\n",
         "            \n",
-        "            fake = g(batch_with_masks)\n",
+        "            fake = g(batch_with_masks)  # the generator generates fake images here\n",
         "            \n",
-        "            loss_mse = (((batch - fake) * masks_g)**2).sum() / masks_g.sum()\n",
+        "            loss_mse = (((batch - fake) * masks_g)**2).sum() / masks_g.sum() # we find the mean squared loss between the generated image and the real image\n",
         "            \n",
-        "            if epoch < T_c:\n",
+        "            if epoch < T_c: # only training the generator. backward propagating the errors of the generator\n",
         "                loss_g = loss_mse\n",
-        "                loss_g.backward()\n",
+        "                loss_g.backward() # backward() is called for the last output of the network i..e the loss. It gives the drivative w.r.t loss function\n",
         "                optimizer_g.step()\n",
         "                optimizer_g.zero_grad()\n",
         "                ep_loss_g += loss_g.detach().cpu()\n",
         "                continue\n",
         "            else:\n",
-        "                inpainted = batch.clone()\n",
-        "                masks_byte = masks_g.byte()\n",
+        "                inpainted = batch.clone() # creating the clone of the current batch\n",
+        "                masks_byte = masks_g.byte() # converting the masks to 8 bit images\n",
         "                inpainted[masks_byte] = fake.detach()[masks_byte].view(-1)\n",
         "                inpainted = torch.cat((inpainted, masks_g[:, :1]), dim=1)\n",
-        "                d_fake = d(inpainted.detach(), bounds_g)\n",
+        "                d_fake = d(inpainted.detach(), bounds_g) # making discriminator predictions for fake images\n",
         "                \n",
         "                masks_d, bounds_d = masks_fn(N)\n",
         "                real = torch.cat((batch.clone(), masks_d[:, :1]), dim=1)\n",
-        "                d_real = d(real, bounds_d)\n",
+        "                d_real = d(real, bounds_d) # making discriminator predicitions for real images\n",
         "                \n",
-        "                loss_d_fake = (d_fake**2).mean()\n",
-        "                loss_d_real = ((d_real - 1)**2).mean()\n",
-        "                loss_d = (loss_d_fake + loss_d_real) / 2\n",
-        "                loss_d.backward()\n",
-        "                optimizer_d.step()\n",
-        "                optimizer_d.zero_grad()\n",
+        "                loss_d_fake = (d_fake**2).mean() # d_fake is the predicted value for a fake image. the error is squared. If d_fake is close to 1, the error is high\n",
+        "                loss_d_real = ((d_real - 1)**2).mean() # d_real is the predicted value for a real image. If d_real is close to 2 the error is high\n",
+        "                loss_d = (loss_d_fake + loss_d_real) / 2 # we take the average of both losses\n",
+        "                loss_d.backward() # backward propagating the discriminator loss\n",
+        "                optimizer_d.step() # perfoms the parameter update\n",
+        "                optimizer_d.zero_grad() # called right after step as backward accumulates the gradient\n",
         "\n",
-        "                if epoch >= T_c + T_d:\n",
+        "                if epoch >= T_c + T_d: # backpropagating the generator using the error at the discriminator\n",
         "                    inpainted = batch.clone()\n",
         "                    inpainted[masks_byte] = fake[masks_byte].view(-1)\n",
         "                    inpainted = torch.cat((inpainted, masks_g[:, :1]), dim=1)\n",
         "                    d_fake = d(inpainted, bounds_g)\n",
-        "                    loss_g = loss_mse + w * ((d_fake - 1)**2).mean()\n",
+        "                    loss_g = loss_mse + w * ((d_fake - 1)**2).mean() # the closer the d_fake is to 1, the better the generator\n",
         "\n",
         "                    loss_g.backward()\n",
         "                    optimizer_g.step()\n",
@@ -760,9 +722,9 @@
         "            \n",
         "            masks, _ = masks_fn(N)\n",
         "            val_batch_masked = val_batch * (1 - masks)\n",
-        "            val_batch_masked = torch.cat((val_batch_masked, masks[:, :1]), dim=1)\n",
-        "            val_pred = g(val_batch_masked).detach()\n",
-        "            val_loss = (((val_batch - val_pred) * masks)**2).sum() / masks.sum()\n",
+        "            val_batch_masked = torch.cat((val_batch_masked, masks[:, :1]), dim=1) # holds the validation images with their masks on\n",
+        "            val_pred = g(val_batch_masked).detach() # generating images\n",
+        "            val_loss = (((val_batch - val_pred) * masks)**2).sum() / masks.sum() # loss of the generated image\n",
         "            inpainted = val_batch.clone()\n",
         "            masks_byte = masks.byte()\n",
         "            inpainted[masks_byte] = val_pred[masks_byte]\n",
@@ -773,7 +735,7 @@
         "                val_pred[0].cpu().clamp(0, 1), \n",
         "                inpainted[0].cpu()\n",
         "            ]\n",
-        "            imshow(torch.cat(imgs, dim=2))\n",
+        "            imshow(torch.cat(imgs, dim=2)) # displaying the impainted validation img\n",
         "            plt.axis('off')\n",
         "            plt.show()\n",
         "\n",
@@ -821,7 +783,7 @@
         "\n",
         "def gen_masks(N, ch=3):\n",
         "    masks, bounds = create_hole_masks(N, 32, 32, (5, 12), (5, 12), same_size=False)\n",
-        "    return masks.repeat_interleave(ch, dim=1).cuda(), bounds\n",
+        "    return masks.repeat_interleave(ch, dim=1).cuda(), bounds # repeats the matrix of masks 3 times as we need a 3 channel image of the masks to combine with another 3 channel image\n",
         "\n",
         "optimizer_g = optim.Adam(generator.parameters(), lr=train_params['learning_rate_g'])\n",
         "optimizer_d = optim.Adam(discriminator.parameters(), lr=train_params['learning_rate_d'])\n",
@@ -1277,7 +1239,7 @@
         "id": "yqEtwnMZypji",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105
+          "height": 100
         },
         "outputId": "dfa16b65-908c-4e40-ca26-d7e46da2fe4e"
       },
@@ -1296,45 +1258,8 @@
         "\n",
         "    loss += (((batch.cuda() - pred) * masks)**2).sum().detach().cpu()\n",
         "    pixels += masks.sum().detach().cpu()\n",
-        "    \n",
-        "#     inpainted = batch.clone()\n",
-        "#     masks_byte = masks.byte()\n",
-        "#     inpainted[masks_byte] = pred[masks_byte].view(-1)\n",
-        "#     border = torch.zeros((3, 32, 2)) + 0.2196\n",
         "\n",
-        "print(loss / pixels)\n",
-        "\"\"\"masks, _ = masks_fn(N)\n",
-        "val_batch_masked = val_batch * (1 - masks)\n",
-        "val_batch_masked = torch.cat((val_batch_masked, masks[:, :1]), dim=1)\n",
-        "val_pred = g(val_batch_masked).detach()\n",
-        "val_loss = (((val_batch - val_pred) * masks)**2).sum() / masks.sum()\n",
-        "inpainted = val_batch.clone()\n",
-        "masks_byte = masks.byte()\n",
-        "inpainted[masks_byte] = val_pred[masks_byte]\n",
-        "imgs = [\n",
-        "    val_batch[0].cpu(), \n",
-        "    masks[0].cpu(), \n",
-        "    val_batch_masked[:, :-1][0].cpu(), \n",
-        "    val_pred[0].cpu().clamp(0, 1), \n",
-        "    inpainted[0].cpu()\n",
-        "]\n",
-        "imshow(torch.cat(imgs, dim=2))\n",
-        "plt.axis('off')\n",
-        "plt.show()\"\"\"\n",
-        "\n",
-        "# for i in range(batch.shape[0]):\n",
-        "#     imgs = [\n",
-        "#         batch[i].cpu(),\n",
-        "#         border,\n",
-        "#         batch_masked[:, :-1][i].cpu(), \n",
-        "# #         pred[i].cpu(), \n",
-        "#         border,\n",
-        "#         inpainted[i].cpu()\n",
-        "#     ]\n",
-        "#     tmp = torch.cat(imgs, dim=2)\n",
-        "#     imshow(tmp)\n",
-        "#     plt.axis('off')\n",
-        "#     plt.show()"
+        "print(loss / pixels,\"loss\")\n"
       ],
       "execution_count": 40,
       "outputs": [
